# study-code

./: .gitignore  CODE_REVIEW.md  README.md  section1_file_io.c  section2_car_refuel.c  sensorfusion_corrected.c
courses/coding-in-C++/Lab_1/my_solution/: StudentData.cpp  age_validation  age_validation.cpp  helloWorld  test
courses/coding-in-C++/Lab_2/: Lab_2.md
courses/coding-in-C++/Lab_2/my_solution/: CMakeLists.txt  Makefile  SearchEngineApp  SearchEngine_UML.md  Section_II  Section_II.cpp  bank.cpp  large_test_data.txt  test_data.txt
courses/coding-in-C++/Lab_2/my_solution/SearchEngine/: SearchEngine.cpp  SearchEngine.hpp  TUI.cpp  TUI.hpp  WebContent.cpp  WebContent.hpp  main.cpp  query.cpp  query.hpp
courses/coding-in-C++/Lab_3/: Lab_3.md  Untitled Diagram-3.drawio
courses/coding-in-C++/Lab_3/my_solution/: GameCharacterSystem_UML.drawio  Section II.cpp  binart
courses/coding-in-C++/Lab_4/: Lab_4.md
courses/coding-in-C++/Lab_4/my-solution/: Challange.cpp  SectionII.cpp  Vector2D.cpp
courses/coding-in-C/Lab_1/MySolution/: helloWorld.c
courses/coding-in-C/Lab_2/MySolution/: Schachbrett I.c  Schachbrett III.c
courses/coding-in-C/Lab_4/MySolution/: Section I.c  Section II.c
courses/coding-in-C/Lab_5/MySolution/: randomParticles.c
courses/coding-in-C/Lab_6/MySolution/: sensorfusion.c
courses/coding-in-C/Lab_7/mySolution/: PlaylistManager.c  sectione 1.c
courses/coding-in-C/Lab_8/: PlaylistManager.c
courses/Übungen/: ExeptionHandling.cpp  Pointer-Übung.c  sensormodul.c
courses/Übungen/Unit Test übung/: string_utils.c  string_utils.h
(+12 files in other folders)
